Fixed tablelayout bug

--- a/pinet/widgets/tablelayout/scss/pinet_tablelayout.scss
+++ b/pinet/widgets/tablelayout/scss/pinet_tablelayout.scss
@@ -18,8 +18,12 @@
 		}
 	}
 	@-moz-document url-prefix() {
-    	.container-table .col {
-    		height: 100%;
+    	.container-table {
+    		>.row {
+    			>.col {
+    				height: 100%;
+    			}
+    		}
     	}
 	}
 }
